update text and error message

--- a/app/src/main/res/values-ja/error.xml
+++ b/app/src/main/res/values-ja/error.xml
@@ -1,53 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="error_question_duplicate">Your question have duplicated</string>
-    <string name="error_empty_answer">Your answer of question %d is empty</string>
-    <string name="error_min_length_answer">Your answer of question %d must have at least 3 letter</string>
-    <string name="error_duplicate_answer">Your answer have duplicated</string>
-    <string name="error_invalid_text_length">ユーザー名の長さは6文字以上でなければなりません</string>
-    <string name="error_invalid_characters">ユーザー名には特殊文字が含まれています</string>
-    <string name="error_empty_phone">電話機は空ではありません</string>
-    <string name="error_empty_email">Please input the email</string>
-    <!--<string name="error_input_referral">Referral is not valid</string>-->
-    <string name="error_empty_passcode">Please input the passcode</string>
-    <string name="error_invalid_passcode">Please check the passcode</string>
-    <string name="error_invalid_email">メールフォーマットが無効です</string>
-    <string name="error_group_name_empty">グループ名が空です</string>
-    <string name="error_group_empty">グループのメンバーがいません</string>
-    <string name="error_empty_username">ユーザー名は空にできません</string>
-    <string name="error_wrong_answer_1st">Answer wrong! Try Again</string>
-    <string name="error_wrong_answer_2nd">Answer wrong! Try Email</string>
+    <string name="error_question_duplicate">あなたは、同じセキュリティの質問を選択することはできません</string>
+    <string name="error_empty_answer">質問%dの答えは空です</string>
+    <string name="error_min_length_answer">質問%dのあなたの答えは、少なくとも3つの文字を持っている必要があります</string>
+    <string name="error_duplicate_answer">あなたの答えは異なっている必要があります</string>
+    <string name="error_invalid_text_length">ユーザー名は、少なくとも6つの文字でなければなりません</string>
+    <string name="error_invalid_characters">ユーザー名は、特殊文字を含めることはできません</string>
+    <string name="error_empty_phone">携帯電話番号を入力してください</string>
+    <string name="error_empty_email">入力してくださいメールアドレス</string>
+    <string name="error_empty_passcode">パスコードを入力してください</string>
+    <string name="error_invalid_passcode">パスコードを確認してください</string>
+    <string name="error_invalid_email">メールアドレスが有効な形式ではありません</string>
+    <string name="error_group_name_empty">グループ名を入力してください</string>
+    <string name="error_group_empty">メンバーを選択してください</string>
+    <string name="error_empty_username">ユーザー名を入力してください</string>
+    <string name="error_wrong_answer_1st">間違った回答！再試行する</string>
+    <string name="error_wrong_answer_2nd">間違った回答！メールでお試しください</string>
 
 
     <!--error code from server-->
-    <string name="error_0">Internet may not be available. Please check again</string>
-    <string name="error_8000">Version mismatch</string>
-    <string name="error_8001">Access is denied</string>
-    <string name="error_8002">Please try again later</string>
-    <string name="error_8003">Member already exists</string>
-    <string name="error_8004">Member not exists</string>
-    <string name="error_8005">Member already activated</string>
-    <string name="error_8006">Member not activated</string>
-    <string name="error_8007">Member invalid email address</string>
-    <string name="error_8009">Verification code expired or invalid</string>
-    <string name="error_8010">Asset not exists</string>
-    <string name="error_8011">Asset retain failure file empty</string>
-    <string name="error_8013">Asset fetch failure file unavailable</string>
-    <string name="error_8016">Asset type not determines</string>
-    <string name="error_8017">Registrant not exists</string>
-    <string name="error_8020">Mail exception</string>
-    <string name="error_8021">Sms exception payload length exceed limit</string>
-    <string name="error_8022">Username already exists</string>
-    <string name="error_8023">Mobile already exists</string>
-    <string name="error_8024">Email already exists</string>
-    <string name="error_8025">Resource not exists</string>
-    <string name="error_8026">Member security questions not found</string>
-    <string name="error_8027">Member doesn\'t exist</string>
-    <string name="error_8028">Email doesn\'t exist</string>
-    <string name="error_8029">Report already exists</string>
-    <string name="error_8030">Report already not exists</string>
-    <string name="error_8031">Inviter user not exists</string>
-    <string name="error_8032">Create user on the xmpp fail</string>
-    <string name="error_8033">Member answered wrong security question</string>
+    <string name="error_0">インターネットが使用できない場合があります。もう一度やり直してください</string>
+    <string name="error_8000">バージョンの不一致</string>
+    <string name="error_8001">アクセスが拒否されました</string>
+    <string name="error_8002">後ほど再度お試しください</string>
+    <string name="error_8003">メンバーはすでに存在します</string>
+    <string name="error_8004">メンバーが存在しません。</string>
+    <string name="error_8005">メンバーはすでに有効化</string>
+    <string name="error_8006">メンバーが起動しません</string>
+    <string name="error_8007">メンバーは、無効なメールアドレスを入力しました</string>
+    <string name="error_8009">検証コードの有効期限が切れているか無効であるました</string>
+    <string name="error_8010">画像は存在しません。</string>
+    <string name="error_8011">失敗ファイルを保持している画像は空です</string>
+    <string name="error_8013">失敗ファイルを取得画像は利用できません</string>
+    <string name="error_8016">資産の種類を判断します</string>
+    <string name="error_8017">登録は存在しません。</string>
+    <string name="error_8020">電子メールを送信することはできません</string>
+    <string name="error_8021">SMSは、文字の制限を超えました</string>
+    <string name="error_8022">ユーザー名は既に存在します</string>
+    <string name="error_8023">携帯電話の番号はすでに存在します</string>
+    <string name="error_8024">メールは既に存在します</string>
+    <string name="error_8025">リソースが存在しません。</string>
+    <string name="error_8026">メンバーのセキュリティ質問が見つかりません。</string>
+    <string name="error_8027">メンバーは存在しません。</string>
+    <string name="error_8028">メールは存在しません。</string>
+    <string name="error_8029">報告書はすでに存在します</string>
+    <string name="error_8030">報告書は存在しません。</string>
+    <string name="error_8031">紹介コードは存在しません。</string>
+    <string name="error_8032">失敗したXMPPにユーザーを作成します。</string>
+    <string name="error_8033">おっとっと！あなたは間違ったセキュリティの質問に答え</string>
 
 </resources>
