--- a/app/src/main/res/values-vi/error.xml
+++ b/app/src/main/res/values-vi/error.xml
@@ -1,53 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="error_question_duplicate">Your question have duplicated</string>
-    <string name="error_empty_answer">Your answer of question %d is empty</string>
-    <string name="error_min_length_answer">Your answer of question %d must have at least 3 letter</string>
-    <string name="error_duplicate_answer">Your answer have duplicated</string>
-    <string name="error_invalid_text_length">ユーザー名の長さは6文字以上でなければなりません</string>
-    <string name="error_invalid_characters">ユーザー名には特殊文字が含まれています</string>
-    <string name="error_empty_phone">電話機は空ではありません</string>
-    <string name="error_empty_email">Please input the email</string>
-    <!--<string name="error_input_referral">Referral is not valid</string>-->
-    <string name="error_empty_passcode">Please input the passcode</string>
-    <string name="error_invalid_passcode">Please check the passcode</string>
-    <string name="error_invalid_email">メールフォーマットが無効です</string>
-    <string name="error_group_name_empty">グループ名が空です</string>
-    <string name="error_group_empty">グループのメンバーがいません</string>
-    <string name="error_empty_username">ユーザー名は空にできません</string>
-    <string name="error_wrong_answer_1st">Answer wrong! Try Again</string>
-    <string name="error_wrong_answer_2nd">Answer wrong! Try Email</string>
+    <string name="error_question_duplicate">Bạn không thể chọn câu hỏi bảo mật tương tự</string>
+    <string name="error_empty_answer">Câu trả lời của câu hỏi %d là rỗng</string>
+    <string name="error_min_length_answer">Câu trả lời của bạn về câu hỏi %d phải có ít nhất 3 chữ cái</string>
+    <string name="error_duplicate_answer">Câu trả lời của bạn phải khác</string>
+    <string name="error_invalid_text_length">Tên truy cập phải có ít nhất 6 ký tự</string>
+    <string name="error_invalid_characters">Tên người dùng không thể chứa ký tự đặc biệt</string>
+    <string name="error_empty_phone">Vui lòng nhập số điện thoại di động của bạn</string>
+    <string name="error_empty_email">Hãy nhập địa chỉ email</string>
+    <string name="error_empty_passcode">Vui lòng nhập mật mã</string>
+    <string name="error_invalid_passcode">Vui lòng kiểm tra mật mã</string>
+    <string name="error_invalid_email">Địa chỉ email không phải là một định dạng hợp lệ</string>
+    <string name="error_group_name_empty">Vui lòng nhập tên nhóm</string>
+    <string name="error_group_empty">Vui lòng chọn thành viên</string>
+    <string name="error_empty_username">Vui lòng nhập tên đăng nhập</string>
+    <string name="error_wrong_answer_1st">Trả lời sai! Thử lại</string>
+    <string name="error_wrong_answer_2nd">Trả lời sai! Vui lòng thử bằng email</string>
 
 
     <!--error code from server-->
-    <string name="error_0">Internet may not be available. Please check again</string>
-    <string name="error_8000">Version mismatch</string>
-    <string name="error_8001">Access is denied</string>
-    <string name="error_8002">Please try again later</string>
-    <string name="error_8003">Member already exists</string>
-    <string name="error_8004">Member not exists</string>
-    <string name="error_8005">Member already activated</string>
-    <string name="error_8006">Member not activated</string>
-    <string name="error_8007">Member invalid email address</string>
-    <string name="error_8009">Verification code expired or invalid</string>
-    <string name="error_8010">Asset not exists</string>
-    <string name="error_8011">Asset retain failure file empty</string>
-    <string name="error_8013">Asset fetch failure file unavailable</string>
-    <string name="error_8016">Asset type not determines</string>
-    <string name="error_8017">Registrant not exists</string>
-    <string name="error_8020">Mail exception</string>
-    <string name="error_8021">Sms exception payload length exceed limit</string>
-    <string name="error_8022">Username already exists</string>
-    <string name="error_8023">Mobile already exists</string>
-    <string name="error_8024">Email already exists</string>
-    <string name="error_8025">Resource not exists</string>
-    <string name="error_8026">Member security questions not found</string>
-    <string name="error_8027">Member doesn\'t exist</string>
-    <string name="error_8028">Email doesn\'t exist</string>
-    <string name="error_8029">Report already exists</string>
-    <string name="error_8030">Report already not exists</string>
-    <string name="error_8031">Inviter user not exists</string>
-    <string name="error_8032">Create user on the xmpp fail</string>
-    <string name="error_8033">Member answered wrong security question</string>
+    <string name="error_0">Internet có thể không có sẵn. Vui lòng thử lại</string>
+    <string name="error_8000">Phiên bản không phù hợp</string>
+    <string name="error_8001">Truy cập bị từ chối</string>
+    <string name="error_8002">Vui lòng thử lại sau</string>
+    <string name="error_8003">Thành viên đã tồn tại</string>
+    <string name="error_8004">Thành viên không tồn tại</string>
+    <string name="error_8005">Thành viên đã được kích hoạt</string>
+    <string name="error_8006">Thành viên chưa kích hoạt</string>
+    <string name="error_8007">Thành viên nhập địa chỉ email không hợp lệ</string>
+    <string name="error_8009">Mã xác minh đã hết hạn hoặc không hợp lệ</string>
+    <string name="error_8010">Hình ảnh không tồn tại</string>
+    <string name="error_8011">Hình ảnh giữ lại tập tin thất bại là có sản phẩm nào</string>
+    <string name="error_8013">Hình ảnh lấy tập tin thất bại là không có sẵn</string>
+    <string name="error_8016">Loại tài sản không xác định</string>
+    <string name="error_8017">Đăng ký doanh nghiệp không tồn tại</string>
+    <string name="error_8020">Không thể gửi thư điện tử</string>
+    <string name="error_8021">Sms có giới hạn ký tự vượt quá</string>
+    <string name="error_8022">Tên này đã có người dùng</string>
+    <string name="error_8023">Số điện thoại di động đã tồn tại</string>
+    <string name="error_8024">Email đã tồn tại</string>
+    <string name="error_8025">Tài nguyên không tồn tại</string>
+    <string name="error_8026">Không tìm thấy câu hỏi bảo mật của thành viên này</string>
+    <string name="error_8027">Thành viên không tồn tại</string>
+    <string name="error_8028">Email không tồn tại</string>
+    <string name="error_8029">Báo cáo đã tồn tại</string>
+    <string name="error_8030">Báo cáo không tồn tại</string>
+    <string name="error_8031">Người dùng không tồn tại</string>
+    <string name="error_8032">Tạo người dùng trên xmpp thất bại</string>
+    <string name="error_8033">Rất tiếc! Bạn đã trả lời câu hỏi bảo mật sai</string>
 
 </resources>
