--- a/app/src/main/res/values-th/error.xml
+++ b/app/src/main/res/values-th/error.xml
@@ -1,53 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="error_question_duplicate">Your question have duplicated</string>
-    <string name="error_empty_answer">Your answer of question %d is empty</string>
-    <string name="error_min_length_answer">Your answer of question %d must have at least 3 letters</string>
-    <string name="error_duplicate_answer">Your answer have duplicated</string>
-    <string name="error_invalid_text_length">ความยาวของชื่อผู้ใช้ต้องมากกว่า 6 ตัวอักษร</string>
-    <string name="error_invalid_characters">ชื่อผู้ใช้มีตัวอักขระพิเศษ</string>
-    <string name="error_empty_phone">โทรศัพท์ไม่สามารถปล่อยว่างได้</string>
-    <string name="error_empty_email">Please input the email</string>
-    <!--<string name="error_input_referral">Referral is not valid</string>-->
-    <string name="error_empty_passcode">Please input the passcode</string>
-    <string name="error_invalid_passcode">Please check the passcode</string>
-    <string name="error_invalid_email">รูปแบบอีเมล์ไม่ถูกต้อง</string>
-    <string name="error_group_name_empty">ชื่อกลุ่มว่างเปล่า</string>
-    <string name="error_group_empty">ไม่มีสมาชิกในกลุ่ม</string>
-    <string name="error_empty_username">ชื่อผู้ใช้ไม่สามารถปล่อยว่างได้</string>
-    <string name="error_wrong_answer_1st">Answer wrong! Try Again</string>
-    <string name="error_wrong_answer_2nd">Answer wrong! Try Email</string>
+    <string name="error_question_duplicate">คุณไม่สามารถเลือกคำถามรักษาความปลอดภัยเดียวกัน</string>
+    <string name="error_empty_answer">คำตอบของคำถามที่ 1 เป็นที่ว่างเปล่า</string>
+    <string name="error_min_length_answer">คำตอบของคุณของคำถาม %d ต้องมีอย่างน้อย 3 ตัวอักษร</string>
+    <string name="error_duplicate_answer">你的回答必須是不同的</string>
+    <string name="error_invalid_text_length">用戶名必須至少為6個字符</string>
+    <string name="error_invalid_characters">用戶名不能包含特殊字符</string>
+    <string name="error_empty_phone">請輸入手機號碼</string>
+    <string name="error_empty_email">請輸入電子郵件地址</string>
+    <string name="error_empty_passcode">請輸入密碼</string>
+    <string name="error_invalid_passcode">請檢查密碼</string>
+    <string name="error_invalid_email">電子郵件地址是不是有效格式</string>
+    <string name="error_group_name_empty">請輸入組名</string>
+    <string name="error_group_empty">請選擇會員</string>
+    <string name="error_empty_username">請輸入您的用戶名</string>
+    <string name="error_wrong_answer_1st">คำตอบที่ผิด! ลองอีกครั้ง</string>
+    <string name="error_wrong_answer_2nd">คำตอบที่ผิด! โปรดลองกับอีเมล</string>
 
 
     <!--error code from server-->
-    <string name="error_0">Internet may not be available. Please check again</string>
-    <string name="error_8000">Version mismatch</string>
-    <string name="error_8001">Access is denied</string>
-    <string name="error_8002">Please try again later</string>
-    <string name="error_8003">Member already exists</string>
-    <string name="error_8004">Member not exists</string>
-    <string name="error_8005">Member already activated</string>
-    <string name="error_8006">Member not activated</string>
-    <string name="error_8007">Member invalid email address</string>
-    <string name="error_8009">Verification code expired or invalid</string>
-    <string name="error_8010">Asset not exists</string>
-    <string name="error_8011">Asset retain failure file empty</string>
-    <string name="error_8013">Asset fetch failure file unavailable</string>
-    <string name="error_8016">Asset type not determines</string>
-    <string name="error_8017">Registrant not exists</string>
-    <string name="error_8020">Mail exception</string>
-    <string name="error_8021">Sms exception payload length exceed limit</string>
-    <string name="error_8022">Username already exists</string>
-    <string name="error_8023">Mobile already exists</string>
-    <string name="error_8024">Email already exists</string>
-    <string name="error_8025">Resource not exists</string>
-    <string name="error_8026">Member security questions not found</string>
-    <string name="error_8027">Member doesn\'t exist</string>
-    <string name="error_8028">Email doesn\'t exist</string>
-    <string name="error_8029">Report already exists</string>
-    <string name="error_8030">Report already not exists</string>
-    <string name="error_8031">Inviter user not exists</string>
-    <string name="error_8032">Create user on the xmpp fail</string>
-    <string name="error_8033">Member answered wrong security question</string>
+    <string name="error_0">อินเทอร์เน็ตอาจจะใช้งานไม่ได้ กรุณาลองอีกครั้ง</string>
+    <string name="error_8000">รุ่นไม่ตรงกัน</string>
+    <string name="error_8001">การเข้าถึงถูกปฏิเสธ</string>
+    <string name="error_8002">กรุณาลองใหม่อีกครั้งในภายหลัง</string>
+    <string name="error_8003">เป็นสมาชิกอยู่แล้ว</string>
+    <string name="error_8004">สมาชิกไม่ได้มีอยู่</string>
+    <string name="error_8005">สมาชิกเปิดใช้งานแล้ว</string>
+    <string name="error_8006">สมาชิกไม่เปิดใช้งาน</string>
+    <string name="error_8007">สมาชิกป้อนที่อยู่อีเมลที่ไม่ถูกต้อง</string>
+    <string name="error_8009">รหัสยืนยันหมดอายุหรือไม่ถูกต้อง</string>
+    <string name="error_8010">ภาพที่ไม่ได้อยู่</string>
+    <string name="error_8011">ภาพที่เก็บไฟล์ล้มเหลวเป็นที่ว่างเปล่า</string>
+    <string name="error_8013">ภาพที่ดึงข้อมูลไฟล์ล้มเหลวไม่พร้อมใช้งาน</string>
+    <string name="error_8016">ประเภทสินทรัพย์ไม่ได้กำหนด</string>
+    <string name="error_8017">ลงทะเบียนไม่ได้อยู่</string>
+    <string name="error_8020">ไม่สามารถส่งอีเมล</string>
+    <string name="error_8021">SMS มีขีด จำกัด ของตัวละครเกิน</string>
+    <string name="error_8022">ชื่อผู้ใช้อยู่แล้ว</string>
+    <string name="error_8023">หมายเลขโทรศัพท์มือถือที่มีอยู่แล้ว</string>
+    <string name="error_8024">อีเมล์ที่มีอยู่แล้ว</string>
+    <string name="error_8025">ทรัพยากรไม่อยู่</string>
+    <string name="error_8026">ไม่พบคำถามการรักษาความปลอดภัยของสมาชิก</string>
+    <string name="error_8027">สมาชิกไม่ได้อยู่</string>
+    <string name="error_8028">อีเมล์ไม่อยู่</string>
+    <string name="error_8029">รายงานที่มีอยู่แล้ว</string>
+    <string name="error_8030">รายงานไม่ได้อยู่</string>
+    <string name="error_8031">รหัสอ้างอิงไม่ได้อยู่</string>
+    <string name="error_8032">สร้างผู้ใช้ XMPP ล้มเหลว</string>
+    <string name="error_8033">อ๊ะ! คุณตอบคำถามการรักษาความปลอดภัยที่ไม่ถูกต้อง</string>
 
 </resources>
