--- a/app/src/main/res/values-zh/error.xml
+++ b/app/src/main/res/values-zh/error.xml
@@ -1,53 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="error_question_duplicate">Your question have duplicated</string>
-    <string name="error_empty_answer">Your answer of question %d is empty</string>
-    <string name="error_min_length_answer">Your answer of question %d must have at least 3 letter</string>
-    <string name="error_duplicate_answer">Your answer have duplicated</string>
-    <string name="error_invalid_text_length">用戶名字一定要6個字元或以上</string>
-    <string name="error_invalid_characters">用戶名字需要包括特別符號</string>
-    <string name="error_empty_phone">電話號碼不能填空</string>
-    <string name="error_empty_email">Please input the email</string>
-    <!--<string name="error_input_referral">Referral is not valid</string>-->
-    <string name="error_empty_passcode">Please input the passcode</string>
-    <string name="error_invalid_passcode">Please check the passcode</string>
-    <string name="error_invalid_email">不正確的電郵格式</string>
-    <string name="error_group_name_empty">群組為空的</string>
-    <string name="error_group_empty">没有成員在群組上</string>
-    <string name="error_empty_username">用戶姓名不可以填空</string>
-    <string name="error_wrong_answer_1st">Answer wrong! Try Again</string>
-    <string name="error_wrong_answer_2nd">Answer wrong! Try Email</string>
+    <string name="error_question_duplicate">你不能選擇同樣的安全問題</string>
+    <string name="error_empty_answer">問題%d的答案是空的</string>
+    <string name="error_min_length_answer">你的問題%d的答案必須至少有3個字母</string>
+    <string name="error_duplicate_answer">你的回答必須是不同的</string>
+    <string name="error_invalid_text_length">用戶名必須至少為6個字符</string>
+    <string name="error_invalid_characters">用戶名不能包含特殊字符</string>
+    <string name="error_empty_phone">請輸入手機號碼</string>
+    <string name="error_empty_email">請輸入電子郵件地址</string>
+    <string name="error_empty_passcode">請輸入密碼</string>
+    <string name="error_invalid_passcode">請檢查密碼</string>
+    <string name="error_invalid_email">電子郵件地址是不是有效格式</string>
+    <string name="error_group_name_empty">請輸入組名</string>
+    <string name="error_group_empty">請選擇會員</string>
+    <string name="error_empty_username">請輸入您的用戶名</string>
+    <string name="error_wrong_answer_1st">答案錯了！再試一次</string>
+    <string name="error_wrong_answer_2nd">答案錯了！請用電子郵件嘗試</string>
 
 
     <!--error code from server-->
-    <string name="error_0">Internet may not be available. Please check again</string>
-    <string name="error_8000">Version mismatch</string>
-    <string name="error_8001">Access is denied</string>
-    <string name="error_8002">Please try again later</string>
-    <string name="error_8003">Member already exists</string>
-    <string name="error_8004">Member not exists</string>
-    <string name="error_8005">Member already activated</string>
-    <string name="error_8006">Member not activated</string>
-    <string name="error_8007">Member invalid email address</string>
-    <string name="error_8009">Verification code expired or invalid</string>
-    <string name="error_8010">Asset not exists</string>
-    <string name="error_8011">Asset retain failure file empty</string>
-    <string name="error_8013">Asset fetch failure file unavailable</string>
-    <string name="error_8016">Asset type not determines</string>
-    <string name="error_8017">Registrant not exists</string>
-    <string name="error_8020">Mail exception</string>
-    <string name="error_8021">Sms exception payload length exceed limit</string>
-    <string name="error_8022">Username already exists</string>
-    <string name="error_8023">Mobile already exists</string>
-    <string name="error_8024">Email already exists</string>
-    <string name="error_8025">Resource not exists</string>
-    <string name="error_8026">Member security questions not found</string>
-    <string name="error_8027">Member doesn\'t exist</string>
-    <string name="error_8028">Email doesn\'t exist</string>
-    <string name="error_8029">Report already exists</string>
-    <string name="error_8030">Report already not exists</string>
-    <string name="error_8031">Inviter user not exists</string>
-    <string name="error_8032">Create user on the xmpp fail</string>
-    <string name="error_8033">Member answered wrong security question</string>
+    <string name="error_0">互聯網可能不可用。請再試一次</string>
+    <string name="error_8000">版本不匹配</string>
+    <string name="error_8001">訪問被拒絕</string>
+    <string name="error_8002">請稍後再試</string>
+    <string name="error_8003">會員已存在</string>
+    <string name="error_8004">成員不存在</string>
+    <string name="error_8005">會員已經激活</string>
+    <string name="error_8006">會員未激活</string>
+    <string name="error_8007">會員輸入了無效的電子郵件地址</string>
+    <string name="error_8009">驗證碼已過期或無效</string>
+    <string name="error_8010">圖片不存在</string>
+    <string name="error_8011">圖片保留失敗文件是空的</string>
+    <string name="error_8013">圖像的獲取失敗文件不可用</string>
+    <string name="error_8016">資產類型不能確定</string>
+    <string name="error_8017">註冊不存在</string>
+    <string name="error_8020">無法發送電子郵件</string>
+    <string name="error_8021">短信已超過字符限制</string>
+    <string name="error_8022">此用戶名已存在</string>
+    <string name="error_8023">手機號碼已經存在</string>
+    <string name="error_8024">電子郵件已經存在</string>
+    <string name="error_8025">資源不存在</string>
+    <string name="error_8026">沒有發現會員的安全問題</string>
+    <string name="error_8027">成員不存在</string>
+    <string name="error_8028">電子郵件不存在</string>
+    <string name="error_8029">報告中已存在</string>
+    <string name="error_8030">報告不存在</string>
+    <string name="error_8031">推薦代碼不存在</string>
+    <string name="error_8032">在失敗XMPP創建用戶</string>
+    <string name="error_8033">哎呀！你回答錯了安全問題</string>
 
 </resources>
