--- a/app/src/main/res/menu/menu_wallet_detail.xml
+++ b/app/src/main/res/menu/menu_wallet_detail.xml
@@ -11,7 +11,7 @@
 
     <item
         android:id="@+id/changepasswallet"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:orderInCategory="0"
         android:title="@string/title_change_password_wallet"
         app:showAsAction="always" />
