--- a/app/src/main/res/values-th/error.xml
+++ b/app/src/main/res/values-th/error.xml
@@ -48,5 +48,6 @@
     <string name="error_8031">รหัสอ้างอิงไม่ได้อยู่</string>
     <string name="error_8032">สร้างผู้ใช้ XMPP ล้มเหลว</string>
     <string name="error_8033">อ๊ะ! คุณตอบคำถามการรักษาความปลอดภัยที่ไม่ถูกต้อง</string>
+    <string name="error_8034">ชื่อผู้ใช้หรือรูปแบบไม่ถูกต้อง</string>
 
 </resources>
