--- a/app/src/main/res/values/error.xml
+++ b/app/src/main/res/values/error.xml
@@ -48,5 +48,6 @@
     <string name="error_8031">User does not exist</string>
     <string name="error_8032">Create user on the xmpp fail</string>
     <string name="error_8033">Oops! You answered the wrong security question</string>
+    <string name="error_8034">The username or pattern is incorrect</string>
 
 </resources>
