setwidth of chat room nickname

--- a/app/src/main/res/layout/actionbar_chat_room.xml
+++ b/app/src/main/res/layout/actionbar_chat_room.xml
@@ -21,7 +21,7 @@
 
     <net.wrappy.im.helper.layout.AppTextView
         android:id="@+id/chat_room_nickname"
-        android:layout_width="wrap_content"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:textSize="15sp"
         android:textColor="#ffffff"
