--- a/app/src/main/res/values-ja/zomstrings.xml
+++ b/app/src/main/res/values-ja/zomstrings.xml
@@ -17,8 +17,8 @@
     <string name="choose_friend">友達を選ぶ</string>
     <string name="send_message">メッセージを送ります</string>
     <string name="push_to_talk">プッシュトゥートーク</string>
-    <string name="recording_release">録音...送信して送信</string>
-    <string name="recording_delete">録音...削除して削除</string>
+    <string name="recording_release">録音…送信して送信</string>
+    <string name="recording_delete">録音…削除して削除</string>
     <string name="swipe_up_delete">スワイプして削除する</string>
     <string name="create_group">グループを作成する</string>
     <string name="members">メンバー</string>
@@ -29,10 +29,8 @@
     <string name="choose_language">スイッチ言語</string>
     <string name="onboarding_generate">&appName; IDを作成すると、安全なパスワードが生成されます。</string>
     <string name="grant_perms_camera">&appName;にカメラの使用を許可する必要があります</string>
-    <string name="grant_perms_pick_file">You must grant permission for &appName;
-        to select file</string>
-    <string name="grant_perms_audio">You must grant permission for &appName;
-        to record audio</string>
+    <string name="grant_perms_pick_file">&appName;にファイルを選択する権限を与える必要があります</string>
+    <string name="grant_perms_audio">&appName;にオーディオの録音を許可する必要があります</string>
 
     <string name="action_archived">アーカイブ済み</string>
     <string name="action_verified">検証済み</string>
@@ -79,7 +77,7 @@
     <string name="turn_notifications_off">通知のミュート</string>
     <string name="num_member_group_chat">メンバー％1 $ s人</string>
     <string name="confirm_leave_group">あなたは本当にグループを離れたいですか？</string>
-    <string name="confirm_delete_and_leave_group">Are you sure you want to delete the group?</string>
-    <string name="confirm_remove_member_group">Are you sure you want to remove this member?</string>
-    <string name="contactswrappy">Contacts</string>
+    <string name="confirm_delete_and_leave_group">グループを削除してもよろしいですか？</string>
+    <string name="confirm_remove_member_group">このメンバーを削除してもよろしいですか？</string>
+    <string name="contactswrappy">連絡先</string>
 </resources>
