--- a/app/src/main/res/values/zomstrings.xml
+++ b/app/src/main/res/values/zomstrings.xml
@@ -67,7 +67,7 @@
     <string name="action_undo">Undo</string>
     <string name="contact_migration_notice">Your friend has upgraded. Chat with them at</string>
     <string name="contact_migration_action">Chat Now</string>
-    <string name="message_waiting_for_friend">Waiting for %s to accept your friend request.</string>
+    <string name="message_waiting_for_friend">Waiting to accept your friend request.</string>
     <string name="action_active">Active</string>
     <string name="action_archive">Archive</string>
     <string name="title_pending">Pending Approval</string>
