add fullname into profile fix layout message list

--- a/app/src/main/res/layout/message_view_right.xml
+++ b/app/src/main/res/layout/message_view_right.xml
@@ -34,13 +34,14 @@
             android:layout_alignParentRight="true"
             android:layout_marginLeft="48dp"
             android:orientation="vertical"
+            android:minWidth="130dp"
             android:paddingRight="48dp">
 
             <LinearLayout
+                android:layout_gravity="right"
                 android:id="@+id/message_container"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:minWidth="100dp"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -111,11 +112,12 @@
 
             <net.ironrabbit.type.CustomTypefaceTextView
                 android:id="@+id/messagets"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="22sp"
                 android:layout_margin="3dp"
                 android:color="?messageTextSecondary"
                 android:gravity="center|right"
+                android:layout_gravity="right"
                 android:textAlignment="gravity"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textSize="12sp" />
