--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -71,10 +71,48 @@
                         android:orientation="vertical">
 
                         <LinearLayout
+                            android:id="@+id/lnProfileFullname"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:background="#fff"
+                            android:orientation="vertical">
+
+                            <net.wrappy.im.helper.layout.AppTextView
+                                style="@style/AppText03"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:padding="10dp"
+                                android:text="@string/fullname" />
+
+                            <View style="@style/divider" />
+
+                            <RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:padding="10dp">
+
+                                <net.wrappy.im.helper.layout.AppEditTextView
+                                    android:id="@+id/edProfileFullName"
+                                    style="@style/AppText02"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:background="@null"
+                                    android:maxLength="25"
+                                    android:hint="@string/fullname"
+                                    android:inputType="textNoSuggestions" />
+                            </RelativeLayout>
+
+
+                        </LinearLayout>
+
+                        <LinearLayout
                             android:id="@+id/lnProfileUsername"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="#fff"
+                            android:layout_marginTop="10dp"
                             android:orientation="vertical">
 
                             <net.wrappy.im.helper.layout.AppTextView
