--- a/app/src/main/res/values-ja/error.xml
+++ b/app/src/main/res/values-ja/error.xml
@@ -49,5 +49,10 @@
     <string name="error_8032">失敗したXMPPにユーザーを作成します。</string>
     <string name="error_8033">おっとっと！あなたは間違ったセキュリティの質問に答え</string>
     <string name="error_8034">ユーザーIDまたはパターンが正しくありません</string>
+    <string name="error_8035">IDもしくはパスワードが正しくありません。あと2回のミスでアカウントが3時間ロックされます</string>
+    <string name="error_8036">IDもしくはパスワードが正しくありません。あと1回のミスでアカウントが3時間ロックされます</string>
+    <string name="error_8037">IDもしくはパスワードが正しくありません。アカウントは3時間ロックされます。</string>
+    <string name="error_unknown">エラーが発生したましたので、後ほどもう一度お試しください。</string>
+
 
 </resources>
