--- a/app/src/main/res/layout/activity_input_password_login.xml
+++ b/app/src/main/res/layout/activity_input_password_login.xml
@@ -7,6 +7,25 @@
     <LinearLayout
         style="@style/match_width"
         android:orientation="vertical">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            android:background="@color/menu_text_active">
+
+            <net.ironrabbit.type.CustomTypefaceTextView
+                android:id="@+id/imgLogo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:adjustViewBounds="true"
+                android:gravity="center"
+                android:textColor="#fff"
+                android:textSize="20sp"
+                android:src="@drawable/logo_wrappy"
+                android:text="@string/login" />
+
+        </RelativeLayout>
+
 
         <net.ironrabbit.type.CustomTypefaceTextView
             android:layout_width="300dp"
@@ -50,7 +69,7 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="25dp"
                 android:background="@drawable/regbtn_states"
-                android:text="@string/title_create_new_wallet"
+                android:text="@string/create_new_password"
                 android:textColor="#fff" />
 
             <net.ironrabbit.type.CustomTypefaceTextView
