--- a/app/src/main/res/values-zh/error.xml
+++ b/app/src/main/res/values-zh/error.xml
@@ -52,6 +52,7 @@
     <string name="error_8035">The username or password is incorrect. You have only 2 times to input again.</string>
     <string name="error_8036">The username or password is incorrect. You have only 1 time to input again.</string>
     <string name="error_8037">The username or password is incorrect. Your account is locked in 3 hours.</string>
+    <string name="error_8038">The username or password is incorrect. Your account has been blocked.</string>
     <string name="error_unknown">An error occurred, please try again later.</string>
 
 </resources>
