adding InputNewPassword screen at ForgetPassword flow

--- a/app/src/main/res/layout/activity_input_password_register.xml
+++ b/app/src/main/res/layout/activity_input_password_register.xml
@@ -9,23 +9,25 @@
         android:orientation="vertical">
 
         <net.ironrabbit.type.CustomTypefaceTextView
+            android:id="@+id/tile_input_password_page"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center"
             android:layout_marginBottom="25dp"
             android:layout_marginTop="25dp"
+            android:gravity="center"
+            android:text="@string/create_new_password"
             android:textColor="#444344"
-            android:textSize="22sp"
-            android:text="@string/create_new_password" />
+            android:textSize="22sp" />
 
         <net.ironrabbit.type.CustomTypefaceTextView
+            android:id="@+id/title_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
             android:layout_marginTop="15dp"
+            android:background="@drawable/alert_password_wallet_background"
+            android:paddingLeft="15dp"
             android:text="@string/create_new_password"
             android:textColor="#444344"
             android:textSize="20sp" />
@@ -46,12 +48,13 @@
             android:textColor="#444344" />
 
         <net.ironrabbit.type.CustomTypefaceTextView
+            android:id="@+id/title_confirm_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
             android:layout_marginTop="15dp"
+            android:background="@drawable/alert_password_wallet_background"
+            android:paddingLeft="15dp"
             android:text="@string/lock_screen_confirm_passphrase"
             android:textColor="#444344"
             android:textSize="20sp" />
@@ -71,21 +74,22 @@
             android:paddingTop="10dp"
             android:textColor="#444344" />
 
-<FrameLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <net.ironrabbit.type.CustomTypefaceButton
-        android:id="@+id/btcreatepassword"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|bottom"
-        android:layout_marginBottom="50dp"
-        android:layout_marginTop="25dp"
-        android:background="@drawable/regbtn_states"
-        android:text="@string/title_create_new_wallet"
-        android:textColor="#fff" />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-</FrameLayout>
+            <net.ironrabbit.type.CustomTypefaceButton
+                android:id="@+id/btcreatepassword"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|bottom"
+                android:layout_marginBottom="50dp"
+                android:layout_marginTop="25dp"
+                android:background="@drawable/regbtn_states"
+                android:text="@string/btn_next"
+                android:textColor="#fff" />
+
+        </FrameLayout>
 
     </LinearLayout>
 </ScrollView>
